using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants 
{
    
    public const string ANIM_IDLE = "Idle";
    public const string ANIM_WAITTARGET = "WaitTarget";
    public const string ANIM_MOVE = "Move";
    public const string ANIM_DEATH = "Death";
    public const string ANIM_SHOOT = "Shoot";
    public const string ANIM_RELOAD = "Reload";
}

public class TAG
{
    public const string ZOMBIE = "Zombie";
    public const string HERO = "Hero";

}

public enum GameState
{

}

public enum CharacterType
{

}